# dependencies-patch

./: Cargo.toml  README.md
src/: arg_parse.rs  cargo_parse.rs  git_patch.rs  index_patch.rs  logger.rs  main.rs  patch.rs  path_patch.rs
